--- a/examples/docusaurus/mistral/docs/api/tag/embeddings.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/embeddings.mdx
@@ -30,6 +30,7 @@ Embeddings
 <ExpandableProperty
   slot="entry"
   id="inputs"
+  headingId="operation-embeddings_v1_embeddings_post+request+inputs"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -44,6 +45,7 @@ Embeddings
 <ExpandableProperty
   slot="entry"
   id="model"
+  headingId="operation-embeddings_v1_embeddings_post+request+model"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -70,6 +72,7 @@ mistral-embed
 <ExpandableProperty
   slot="entry"
   id="output_dimension"
+  headingId="operation-embeddings_v1_embeddings_post+request+output_dimension"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -83,6 +86,7 @@ mistral-embed
 <ExpandableProperty
   slot="entry"
   id="output_dtype"
+  headingId="operation-embeddings_v1_embeddings_post+request+output_dtype"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"float\"","linkedLabel":"\"float\"","children":[],"breakoutSubTypes":{}},{"label":"\"int8\"","linkedLabel":"\"int8\"","children":[],"breakoutSubTypes":{}},{"label":"\"uint8\"","linkedLabel":"\"uint8\"","children":[],"breakoutSubTypes":{}},{"label":"\"binary\"","linkedLabel":"\"binary\"","children":[],"breakoutSubTypes":{}},{"label":"\"ubinary\"","linkedLabel":"\"ubinary\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -122,7 +126,8 @@ Successful Response
 <ExpandableProperty
   slot="entry"
   id="data"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[{"label":"EmbeddingResponseData","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata\">EmbeddingResponseData</a>","children":[{"label":"EmbeddingResponseData","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata\">EmbeddingResponseData</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
@@ -133,11 +138,11 @@ Successful Response
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="data_EmbeddingResponseData" parentId="data">
+<ExpandableBreakout slot="entry" id="data_EmbeddingResponseData" headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata" parentId="data">
 
 <div slot="title">
 
-#### EmbeddingResponseData \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData\}
+#### EmbeddingResponseData \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata\}
 
 </div>
 
@@ -146,12 +151,13 @@ Successful Response
 <ExpandableProperty
   slot="entry"
   id="data_EmbeddingResponseData_embedding"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+embedding"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### embedding \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+embedding\}
+##### embedding \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+embedding\}
 
 </div>
 
@@ -160,12 +166,13 @@ Successful Response
 <ExpandableProperty
   slot="entry"
   id="data_EmbeddingResponseData_index"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+index"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### index \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+index\}
+##### index \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+index\}
 
 </div>
 
@@ -184,12 +191,13 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="data_EmbeddingResponseData_object"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+object"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### object \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+object\}
+##### object \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+object\}
 
 </div>
 
@@ -208,6 +216,7 @@ embedding
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -232,6 +241,7 @@ cmpl-e5cc70bb28c444948073e77776eb30ef
 <ExpandableProperty
   slot="entry"
   id="model"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+model"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -256,6 +266,7 @@ mistral-small-latest
 <ExpandableProperty
   slot="entry"
   id="object"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -280,7 +291,8 @@ chat.completion
 <ExpandableProperty
   slot="entry"
   id="usage"
-  typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage"
+  typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
@@ -291,11 +303,11 @@ chat.completion
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="usage_UsageInfo" parentId="usage">
+<ExpandableBreakout slot="entry" id="usage_UsageInfo" headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo" parentId="usage">
 
 <div slot="title">
 
-#### UsageInfo \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo\}
+#### UsageInfo \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo\}
 
 </div>
 
@@ -304,13 +316,14 @@ chat.completion
 <ExpandableProperty
   slot="entry"
   id="usage_UsageInfo_completion_tokens"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+completion_tokens"
   parentId="usage_UsageInfo"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### completion_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+completion_tokens\}
+##### completion_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+completion_tokens\}
 
 </div>
 
@@ -329,13 +342,14 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="usage_UsageInfo_prompt_tokens"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+prompt_tokens"
   parentId="usage_UsageInfo"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### prompt_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+prompt_tokens\}
+##### prompt_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+prompt_tokens\}
 
 </div>
 
@@ -354,13 +368,14 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="usage_UsageInfo_total_tokens"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+total_tokens"
   parentId="usage_UsageInfo"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### total_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+total_tokens\}
+##### total_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+total_tokens\}
 
 </div>
 
@@ -395,22 +410,23 @@ Validation Error
 <ExpandableProperty
   slot="entry"
   id="HttpMeta"
-  typeInfo={{"label":"HTTPMetadata","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+HTTPMetadata\">HTTPMetadata</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta"
+  typeInfo={{"label":"HTTPMetadata","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata\">HTTPMetadata</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### HttpMeta \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta\}
+##### HttpMeta \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta\}
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="HttpMeta_HTTPMetadata" parentId="HttpMeta">
+<ExpandableBreakout slot="entry" id="HttpMeta_HTTPMetadata" headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata" parentId="HttpMeta">
 
 <div slot="title">
 
-#### HTTPMetadata \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+HTTPMetadata\}
+#### HTTPMetadata \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata\}
 
 </div>
 
@@ -419,13 +435,14 @@ Validation Error
 <ExpandableProperty
   slot="entry"
   id="HttpMeta_HTTPMetadata_Request"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata+request"
   parentId="HttpMeta_HTTPMetadata"
   typeInfo={{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### Request \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+HTTPMetadata+Request\}
+##### Request \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata+request\}
 
 </div>
 
@@ -440,13 +457,14 @@ Raw HTTP request; suitable for debugging
 <ExpandableProperty
   slot="entry"
   id="HttpMeta_HTTPMetadata_Response"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata+response"
   parentId="HttpMeta_HTTPMetadata"
   typeInfo={{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### Response \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+HTTPMetadata+Response\}
+##### Response \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata+response\}
 
 </div>
 
@@ -461,7 +479,8 @@ Raw HTTP response; suitable for custom response parsing
 <ExpandableProperty
   slot="entry"
   id="detail"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
@@ -471,11 +490,11 @@ Raw HTTP response; suitable for custom response parsing
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="detail_ValidationError" parentId="detail">
+<ExpandableBreakout slot="entry" id="detail_ValidationError" headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror" parentId="detail">
 
 <div slot="title">
 
-#### ValidationError \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError\}
+#### ValidationError \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror\}
 
 </div>
 
@@ -484,13 +503,14 @@ Raw HTTP response; suitable for custom response parsing
 <ExpandableProperty
   slot="entry"
   id="detail_ValidationError_loc"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror+loc"
   parentId="detail_ValidationError"
   typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### loc \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+loc\}
+##### loc \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror+loc\}
 
 </div>
 
@@ -499,13 +519,14 @@ Raw HTTP response; suitable for custom response parsing
 <ExpandableProperty
   slot="entry"
   id="detail_ValidationError_msg"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror+msg"
   parentId="detail_ValidationError"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### msg \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+msg\}
+##### msg \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror+msg\}
 
 </div>
 
@@ -514,13 +535,14 @@ Raw HTTP response; suitable for custom response parsing
 <ExpandableProperty
   slot="entry"
   id="detail_ValidationError_type"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror+type"
   parentId="detail_ValidationError"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### type \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+type\}
+##### type \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror+type\}
 
 </div>
 
