--- a/examples/docusaurus/mistral/docs/api/tag/files.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/files.mdx
@@ -4,7 +4,7 @@ sidebar_label: Files
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, TabbedSection, SectionTitle, SectionTab, SectionContent, ExpandableSection, ExpandableProperty, ExpandableBreakout, Section } from "@speakeasy-api/docs-md/docusaurus";
+import { Pill, TabbedSection, SectionTitle, SectionTab, SectionContent, ExpandableSection, ExpandableProperty, ExpandableBreakout, Section, FrontMatterDisplayType } from "@speakeasy-api/docs-md/docusaurus";
 
 
 # Files Operations \{#files\}
@@ -38,7 +38,8 @@ OK
 <ExpandableProperty
   slot="entry"
   id="data"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema\">FileSchema</a>","children":[{"label":"FileSchema","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema\">FileSchema</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema\">FileSchema</a>","children":[{"label":"FileSchema","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema\">FileSchema</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
@@ -49,11 +50,11 @@ OK
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="data_FileSchema" parentId="data">
+<ExpandableBreakout slot="entry" id="data_FileSchema" headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema" parentId="data">
 
 <div slot="title">
 
-#### FileSchema \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema\}
+#### FileSchema \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema\}
 
 </div>
 
@@ -62,13 +63,14 @@ OK
 <ExpandableProperty
   slot="entry"
   id="data_FileSchema_created_at"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+created_at"
   parentId="data_FileSchema"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### created_at \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+created_at\}
+##### created_at \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+created_at\}
 
 </div>
 
@@ -89,13 +91,14 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="data_FileSchema_filename"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+filename"
   parentId="data_FileSchema"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### filename \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+filename\}
+##### filename \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+filename\}
 
 </div>
 
@@ -116,13 +119,14 @@ files_upload.jsonl
 <ExpandableProperty
   slot="entry"
   id="data_FileSchema_id"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+id"
   parentId="data_FileSchema"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### id \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+id\}
+##### id \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+id\}
 
 </div>
 
@@ -143,12 +147,13 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="data_FileSchema_num_lines"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+num_lines"
   parentId="data_FileSchema"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### num_lines \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+num_lines\}
+##### num_lines \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+num_lines\}
 
 </div>
 
@@ -157,13 +162,14 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="data_FileSchema_object"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+object"
   parentId="data_FileSchema"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### object \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+object\}
+##### object \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+object\}
 
 </div>
 
@@ -184,13 +190,14 @@ file
 <ExpandableProperty
   slot="entry"
   id="data_FileSchema_purpose"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+purpose"
   parentId="data_FileSchema"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### purpose \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+purpose\}
+##### purpose \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+purpose\}
 
 </div>
 
@@ -199,13 +206,14 @@ file
 <ExpandableProperty
   slot="entry"
   id="data_FileSchema_sample_type"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+sample_type"
   parentId="data_FileSchema"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### sample_type \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+sample_type\}
+##### sample_type \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+sample_type\}
 
 </div>
 
@@ -214,13 +222,14 @@ file
 <ExpandableProperty
   slot="entry"
   id="data_FileSchema_size_bytes"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+size_bytes"
   parentId="data_FileSchema"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### size_bytes \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+size_bytes\}
+##### size_bytes \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+size_bytes\}
 
 </div>
 
@@ -241,13 +250,14 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="data_FileSchema_source"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+source"
   parentId="data_FileSchema"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### source \{#operation-files_api_routes_list_files+responses+200+application-json+data+FileSchema+source\}
+##### source \{#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+source\}
 
 </div>
 
@@ -256,6 +266,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="object"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -270,6 +281,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="total"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+total"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -312,7 +324,8 @@ Please contact us if you need to increase these storage limits.
 <ExpandableProperty
   slot="entry"
   id="file"
-  typeInfo={{"label":"File","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+File\">File</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file"
+  typeInfo={{"label":"File","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file\">File</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
@@ -323,11 +336,11 @@ Please contact us if you need to increase these storage limits.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="file_File" parentId="file">
+<ExpandableBreakout slot="entry" id="file_File" headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file" parentId="file">
 
 <div slot="title">
 
-#### File \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+File\}
+#### File \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file\}
 
 </div>
 
@@ -350,13 +363,14 @@ The File object (not file name) to be uploaded.
 <ExpandableProperty
   slot="entry"
   id="file_File_content"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file+content"
   parentId="file_File"
   typeInfo={{"label":"binary","linkedLabel":"binary","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### content \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+File+content\}
+##### content \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file+content\}
 
 </div>
 
@@ -365,13 +379,14 @@ The File object (not file name) to be uploaded.
 <ExpandableProperty
   slot="entry"
   id="file_File_fileName"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file+filename"
   parentId="file_File"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### fileName \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+File+fileName\}
+##### fileName \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file+filename\}
 
 </div>
 
@@ -380,6 +395,7 @@ The File object (not file name) to be uploaded.
 <ExpandableProperty
   slot="entry"
   id="purpose"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+purpose"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -419,6 +435,7 @@ OK
 <ExpandableProperty
   slot="entry"
   id="created_at"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+created_at"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -445,6 +462,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="filename"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+filename"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -471,6 +489,7 @@ files_upload.jsonl
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -497,6 +516,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="num_lines"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+num_lines"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -510,6 +530,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="object"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -536,6 +557,7 @@ file
 <ExpandableProperty
   slot="entry"
   id="purpose"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+purpose"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -550,6 +572,7 @@ file
 <ExpandableProperty
   slot="entry"
   id="sample_type"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+sample_type"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -564,6 +587,7 @@ file
 <ExpandableProperty
   slot="entry"
   id="size_bytes"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+size_bytes"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -590,6 +614,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="source"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+source"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -628,6 +653,7 @@ Returns information about a specific file.
 <ExpandableProperty
   slot="entry"
   id="file_id"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+parameters+file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
 
@@ -668,6 +694,7 @@ OK
 <ExpandableProperty
   slot="entry"
   id="created_at"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+created_at"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -694,6 +721,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="deleted"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+deleted"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -708,6 +736,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="filename"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+filename"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -734,6 +763,7 @@ files_upload.jsonl
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -760,6 +790,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="num_lines"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+num_lines"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -773,6 +804,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="object"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -799,6 +831,7 @@ file
 <ExpandableProperty
   slot="entry"
   id="purpose"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+purpose"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -813,6 +846,7 @@ file
 <ExpandableProperty
   slot="entry"
   id="sample_type"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+sample_type"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -827,6 +861,7 @@ file
 <ExpandableProperty
   slot="entry"
   id="size_bytes"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+size_bytes"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -853,6 +888,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="source"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+source"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -891,6 +927,7 @@ Delete a file.
 <ExpandableProperty
   slot="entry"
   id="file_id"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+parameters+file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
 
@@ -931,6 +968,7 @@ OK
 <ExpandableProperty
   slot="entry"
   id="deleted"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses+200+application-json+deleted"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -957,6 +995,7 @@ false
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses+200+application-json+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -983,6 +1022,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="object"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses+200+application-json+object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -1033,6 +1073,7 @@ Download a file
 <ExpandableProperty
   slot="entry"
   id="file_id"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+parameters+file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
 
@@ -1066,6 +1107,8 @@ Download a file
 
 <SectionContent slot="content" variant="top-level" id="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+responses+200+application-octet-stream">
 
+<FrontMatterDisplayType typeInfo={{"label":"binary","linkedLabel":"binary","children":[],"breakoutSubTypes":{}}} />
+
 OK
 
 OK
@@ -1097,6 +1140,7 @@ Get Signed Url
 <ExpandableProperty
   slot="entry"
   id="file_id"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+parameters+file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
 
@@ -1111,6 +1155,7 @@ Get Signed Url
 <ExpandableProperty
   slot="entry"
   id="expiry"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+parameters+expiry"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -1157,6 +1202,7 @@ OK
 <ExpandableProperty
   slot="entry"
   id="url"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+responses+200+application-json+url"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
