--- a/examples/docusaurus/pokeapi/docs/api/tag/machines.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/tag/machines.mdx
@@ -30,11 +30,12 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_machine_list+security+cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth \{#operation-api_v2_machine_list+security+cookieAuth\}
+##### cookieAuth \{#operation-api_v2_machine_list+security+cookieauth\}
 
 </div>
 
@@ -43,11 +44,12 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_machine_list+security+basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth \{#operation-api_v2_machine_list+security+basicAuth\}
+##### basicAuth \{#operation-api_v2_machine_list+security+basicauth\}
 
 </div>
 
@@ -74,6 +76,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="limit"
+  headingId="operation-api_v2_machine_list+parameters+limit"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -94,6 +97,7 @@ Number of results to return per page.
 <ExpandableProperty
   slot="entry"
   id="offset"
+  headingId="operation-api_v2_machine_list+parameters+offset"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -114,6 +118,7 @@ The initial index from which to return the results.
 <ExpandableProperty
   slot="entry"
   id="q"
+  headingId="operation-api_v2_machine_list+parameters+q"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -159,6 +164,7 @@ Case-insensitive query applied on the `name` property.
 <ExpandableProperty
   slot="entry"
   id="count"
+  headingId="operation-api_v2_machine_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -182,6 +188,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="next"
+  headingId="operation-api_v2_machine_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -205,6 +212,7 @@ http://api.example.org/accounts/?offset=400&limit=100
 <ExpandableProperty
   slot="entry"
   id="previous"
+  headingId="operation-api_v2_machine_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -228,7 +236,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary\">MachineSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  headingId="operation-api_v2_machine_list+responses+200+application-json+results"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+machinesummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+machinesummary\">MachineSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
@@ -238,11 +247,11 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="results_MachineSummary" parentId="results">
+<ExpandableBreakout slot="entry" id="results_MachineSummary" headingId="operation-api_v2_machine_list+responses+200+application-json+results+machinesummary" parentId="results">
 
 <div slot="title">
 
-#### MachineSummary \{#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary\}
+#### MachineSummary \{#operation-api_v2_machine_list+responses+200+application-json+results+machinesummary\}
 
 </div>
 
@@ -251,13 +260,14 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results_MachineSummary_url"
+  headingId="operation-api_v2_machine_list+responses+200+application-json+results+machinesummary+url"
   parentId="results_MachineSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary+url\}
+##### url \{#operation-api_v2_machine_list+responses+200+application-json+results+machinesummary+url\}
 
 </div>
 
@@ -290,11 +300,12 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security+cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security+cookieAuth\}
+##### cookieAuth \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security+cookieauth\}
 
 </div>
 
@@ -303,11 +314,12 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security+basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security+basicAuth\}
+##### basicAuth \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security+basicauth\}
 
 </div>
 
@@ -334,6 +346,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+parameters+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
 
@@ -378,6 +391,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+id"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -392,7 +406,8 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="item"
-  typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item"
+  typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
@@ -403,11 +418,11 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="item_ItemSummary" parentId="item">
+<ExpandableBreakout slot="entry" id="item_ItemSummary" headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary" parentId="item">
 
 <div slot="title">
 
-#### ItemSummary \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary\}
+#### ItemSummary \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary\}
 
 </div>
 
@@ -416,13 +431,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="item_ItemSummary_name"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary+name"
   parentId="item_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary+name\}
+##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary+name\}
 
 </div>
 
@@ -431,13 +447,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="item_ItemSummary_url"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary+url"
   parentId="item_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary+url\}
+##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary+url\}
 
 </div>
 
@@ -446,7 +463,8 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="move"
-  typeInfo={{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move"
+  typeInfo={{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
@@ -457,11 +475,11 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="move_MoveSummary" parentId="move">
+<ExpandableBreakout slot="entry" id="move_MoveSummary" headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary" parentId="move">
 
 <div slot="title">
 
-#### MoveSummary \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary\}
+#### MoveSummary \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary\}
 
 </div>
 
@@ -470,13 +488,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="move_MoveSummary_name"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary+name"
   parentId="move_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary+name\}
+##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary+name\}
 
 </div>
 
@@ -485,13 +504,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="move_MoveSummary_url"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary+url"
   parentId="move_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary+url\}
+##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary+url\}
 
 </div>
 
@@ -500,7 +520,8 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="version_group"
-  typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group"
+  typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
@@ -511,11 +532,11 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="version_group_VersionGroupSummary" parentId="version_group">
+<ExpandableBreakout slot="entry" id="version_group_VersionGroupSummary" headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary" parentId="version_group">
 
 <div slot="title">
 
-#### VersionGroupSummary \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary\}
+#### VersionGroupSummary \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary\}
 
 </div>
 
@@ -524,13 +545,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="version_group_VersionGroupSummary_name"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary+name"
   parentId="version_group_VersionGroupSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary+name\}
+##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary+name\}
 
 </div>
 
@@ -539,13 +561,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="version_group_VersionGroupSummary_url"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary+url"
   parentId="version_group_VersionGroupSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary+url\}
+##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary+url\}
 
 </div>
 
