--- a/examples/docusaurus/pokeapi/docs/api/tag/utility.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/tag/utility.mdx
@@ -30,11 +30,12 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_language_list+security+cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth \{#operation-api_v2_language_list+security+cookieAuth\}
+##### cookieAuth \{#operation-api_v2_language_list+security+cookieauth\}
 
 </div>
 
@@ -43,11 +44,12 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_language_list+security+basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth \{#operation-api_v2_language_list+security+basicAuth\}
+##### basicAuth \{#operation-api_v2_language_list+security+basicauth\}
 
 </div>
 
@@ -74,6 +76,7 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="limit"
+  headingId="operation-api_v2_language_list+parameters+limit"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -94,6 +97,7 @@ Number of results to return per page.
 <ExpandableProperty
   slot="entry"
   id="offset"
+  headingId="operation-api_v2_language_list+parameters+offset"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -114,6 +118,7 @@ The initial index from which to return the results.
 <ExpandableProperty
   slot="entry"
   id="q"
+  headingId="operation-api_v2_language_list+parameters+q"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -159,6 +164,7 @@ Case-insensitive query applied on the `name` property.
 <ExpandableProperty
   slot="entry"
   id="count"
+  headingId="operation-api_v2_language_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -182,6 +188,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="next"
+  headingId="operation-api_v2_language_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -205,6 +212,7 @@ http://api.example.org/accounts/?offset=400&limit=100
 <ExpandableProperty
   slot="entry"
   id="previous"
+  headingId="operation-api_v2_language_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -228,7 +236,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  headingId="operation-api_v2_language_list+responses+200+application-json+results"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+languagesummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
@@ -238,11 +247,11 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="results_LanguageSummary" parentId="results">
+<ExpandableBreakout slot="entry" id="results_LanguageSummary" headingId="operation-api_v2_language_list+responses+200+application-json+results+languagesummary" parentId="results">
 
 <div slot="title">
 
-#### LanguageSummary \{#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary\}
+#### LanguageSummary \{#operation-api_v2_language_list+responses+200+application-json+results+languagesummary\}
 
 </div>
 
@@ -251,13 +260,14 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results_LanguageSummary_name"
+  headingId="operation-api_v2_language_list+responses+200+application-json+results+languagesummary+name"
   parentId="results_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary+name\}
+##### name \{#operation-api_v2_language_list+responses+200+application-json+results+languagesummary+name\}
 
 </div>
 
@@ -266,13 +276,14 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results_LanguageSummary_url"
+  headingId="operation-api_v2_language_list+responses+200+application-json+results+languagesummary+url"
   parentId="results_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary+url\}
+##### url \{#operation-api_v2_language_list+responses+200+application-json+results+languagesummary+url\}
 
 </div>
 
@@ -305,11 +316,12 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+security+cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+security+cookieAuth\}
+##### cookieAuth \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+security+cookieauth\}
 
 </div>
 
@@ -318,11 +330,12 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+security+basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+security+basicAuth\}
+##### basicAuth \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+security+basicauth\}
 
 </div>
 
@@ -349,6 +362,7 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+parameters+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
 
@@ -393,6 +407,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+id"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -407,6 +422,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="iso3166"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+iso3166"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -421,6 +437,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="iso639"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+iso639"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -435,6 +452,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="name"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -449,7 +467,8 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName\">LanguageName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename\">LanguageName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
@@ -460,11 +479,11 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="names_LanguageName" parentId="names">
+<ExpandableBreakout slot="entry" id="names_LanguageName" headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename" parentId="names">
 
 <div slot="title">
 
-#### LanguageName \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName\}
+#### LanguageName \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename\}
 
 </div>
 
@@ -473,23 +492,24 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_LanguageName_language"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language"
   parentId="names_LanguageName"
-  typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### language \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language\}
+##### language \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language\}
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="names_LanguageName_language_LanguageSummary" parentId="names_LanguageName_language">
+<ExpandableBreakout slot="entry" id="names_LanguageName_language_LanguageSummary" headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary" parentId="names_LanguageName_language">
 
 <div slot="title">
 
-#### LanguageSummary \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary\}
+#### LanguageSummary \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary\}
 
 </div>
 
@@ -498,13 +518,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_LanguageName_language_LanguageSummary_name"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary+name"
   parentId="names_LanguageName_language_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary+name\}
+##### name \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary+name\}
 
 </div>
 
@@ -513,13 +534,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_LanguageName_language_LanguageSummary_url"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary+url"
   parentId="names_LanguageName_language_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary+url\}
+##### url \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary+url\}
 
 </div>
 
@@ -528,13 +550,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_LanguageName_name"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+name"
   parentId="names_LanguageName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+name\}
+##### name \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+name\}
 
 </div>
 
@@ -543,6 +566,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="official"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+official"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
