--- a/examples/nextra/mistral/src/app/api/tag/embeddings/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/embeddings/page.mdx
@@ -18,7 +18,7 @@ Embeddings
 
 <SectionTitle slot="title" variant="top-level">
 
-### Request Body [#operation-embeddings_v1_embeddings_post+request]
+### Request Body [#operation-embeddings_v1_embeddings_post_request]
 
 </SectionTitle>
 
@@ -29,12 +29,13 @@ Embeddings
 <ExpandableProperty
   slot="entry"
   id="inputs"
+  headingId="operation-embeddings_v1_embeddings_post_request_inputs"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### inputs [#operation-embeddings_v1_embeddings_post+request+inputs]
+##### inputs [#operation-embeddings_v1_embeddings_post_request_inputs]
 
 </div>
 
@@ -43,12 +44,13 @@ Embeddings
 <ExpandableProperty
   slot="entry"
   id="model"
+  headingId="operation-embeddings_v1_embeddings_post_request_model"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### model [#operation-embeddings_v1_embeddings_post+request+model]
+##### model [#operation-embeddings_v1_embeddings_post_request_model]
 
 </div>
 
@@ -69,11 +71,12 @@ mistral-embed
 <ExpandableProperty
   slot="entry"
   id="output_dimension"
+  headingId="operation-embeddings_v1_embeddings_post_request_output_dimension"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### output_dimension [#operation-embeddings_v1_embeddings_post+request+output_dimension]
+##### output_dimension [#operation-embeddings_v1_embeddings_post_request_output_dimension]
 
 </div>
 
@@ -82,11 +85,12 @@ mistral-embed
 <ExpandableProperty
   slot="entry"
   id="output_dtype"
+  headingId="operation-embeddings_v1_embeddings_post_request_output_dtype"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"float\"","linkedLabel":"\"float\"","children":[],"breakoutSubTypes":{}},{"label":"\"int8\"","linkedLabel":"\"int8\"","children":[],"breakoutSubTypes":{}},{"label":"\"uint8\"","linkedLabel":"\"uint8\"","children":[],"breakoutSubTypes":{}},{"label":"\"binary\"","linkedLabel":"\"binary\"","children":[],"breakoutSubTypes":{}},{"label":"\"ubinary\"","linkedLabel":"\"ubinary\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### output_dtype [#operation-embeddings_v1_embeddings_post+request+output_dtype]
+##### output_dtype [#operation-embeddings_v1_embeddings_post_request_output_dtype]
 
 </div>
 
@@ -102,17 +106,17 @@ mistral-embed
 
 <SectionTitle slot="title" variant="default">
 
-### Responses [#operation-embeddings_v1_embeddings_post+responses]
+### Responses [#operation-embeddings_v1_embeddings_post_responses]
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-embeddings_v1_embeddings_post+responses+200+application-json">
+<SectionTab slot="tab" id="operation-embeddings_v1_embeddings_post_responses_200_application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" variant="top-level" id="operation-embeddings_v1_embeddings_post+responses+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-embeddings_v1_embeddings_post_responses_200_application-json">
 
 Successful Response
 
@@ -121,22 +125,23 @@ Successful Response
 <ExpandableProperty
   slot="entry"
   id="data"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[{"label":"EmbeddingResponseData","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata\">EmbeddingResponseData</a>","children":[{"label":"EmbeddingResponseData","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata\">EmbeddingResponseData</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### data [#operation-embeddings_v1_embeddings_post+responses+200+application-json+data]
+##### data [#operation-embeddings_v1_embeddings_post_responses_200_application-json_data]
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="data_EmbeddingResponseData" parentId="data">
+<ExpandableBreakout slot="entry" id="data_EmbeddingResponseData" headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata" parentId="data">
 
 <div slot="title">
 
-#### EmbeddingResponseData [#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData]
+#### EmbeddingResponseData [#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata]
 
 </div>
 
@@ -145,12 +150,13 @@ Successful Response
 <ExpandableProperty
   slot="entry"
   id="data_EmbeddingResponseData_embedding"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_embedding"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### embedding [#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+embedding]
+##### embedding [#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_embedding]
 
 </div>
 
@@ -159,12 +165,13 @@ Successful Response
 <ExpandableProperty
   slot="entry"
   id="data_EmbeddingResponseData_index"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_index"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### index [#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+index]
+##### index [#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_index]
 
 </div>
 
@@ -183,12 +190,13 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="data_EmbeddingResponseData_object"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_object"
   parentId="data_EmbeddingResponseData"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### object [#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+object]
+##### object [#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_object]
 
 </div>
 
@@ -207,12 +215,13 @@ embedding
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### id [#operation-embeddings_v1_embeddings_post+responses+200+application-json+id]
+##### id [#operation-embeddings_v1_embeddings_post_responses_200_application-json_id]
 
 </div>
 
@@ -231,12 +240,13 @@ cmpl-e5cc70bb28c444948073e77776eb30ef
 <ExpandableProperty
   slot="entry"
   id="model"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_model"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### model [#operation-embeddings_v1_embeddings_post+responses+200+application-json+model]
+##### model [#operation-embeddings_v1_embeddings_post_responses_200_application-json_model]
 
 </div>
 
@@ -255,12 +265,13 @@ mistral-small-latest
 <ExpandableProperty
   slot="entry"
   id="object"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### object [#operation-embeddings_v1_embeddings_post+responses+200+application-json+object]
+##### object [#operation-embeddings_v1_embeddings_post_responses_200_application-json_object]
 
 </div>
 
@@ -279,22 +290,23 @@ chat.completion
 <ExpandableProperty
   slot="entry"
   id="usage"
-  typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage"
+  typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### usage [#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage]
+##### usage [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage]
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="usage_UsageInfo" parentId="usage">
+<ExpandableBreakout slot="entry" id="usage_UsageInfo" headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo" parentId="usage">
 
 <div slot="title">
 
-#### UsageInfo [#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo]
+#### UsageInfo [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo]
 
 </div>
 
@@ -303,13 +315,14 @@ chat.completion
 <ExpandableProperty
   slot="entry"
   id="usage_UsageInfo_completion_tokens"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_completion_tokens"
   parentId="usage_UsageInfo"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### completion_tokens [#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+completion_tokens]
+##### completion_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_completion_tokens]
 
 </div>
 
@@ -328,13 +341,14 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="usage_UsageInfo_prompt_tokens"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_prompt_tokens"
   parentId="usage_UsageInfo"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### prompt_tokens [#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+prompt_tokens]
+##### prompt_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_prompt_tokens]
 
 </div>
 
@@ -353,13 +367,14 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="usage_UsageInfo_total_tokens"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_total_tokens"
   parentId="usage_UsageInfo"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### total_tokens [#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+total_tokens]
+##### total_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_total_tokens]
 
 </div>
 
@@ -379,13 +394,13 @@ _Example:_
 
 </SectionContent>
 
-<SectionTab slot="tab" id="operation-embeddings_v1_embeddings_post+responses+200+422+application-json">
+<SectionTab slot="tab" id="operation-embeddings_v1_embeddings_post_responses_200_422_application-json">
 
 422
 
 </SectionTab>
 
-<SectionContent slot="content" variant="top-level" id="operation-embeddings_v1_embeddings_post+responses+200+422+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-embeddings_v1_embeddings_post_responses_200_422_application-json">
 
 Validation Error
 
@@ -394,22 +409,23 @@ Validation Error
 <ExpandableProperty
   slot="entry"
   id="HttpMeta"
-  typeInfo={{"label":"HTTPMetadata","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+HTTPMetadata\">HTTPMetadata</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta"
+  typeInfo={{"label":"HTTPMetadata","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata\">HTTPMetadata</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### HttpMeta [#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta]
+##### HttpMeta [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta]
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="HttpMeta_HTTPMetadata" parentId="HttpMeta">
+<ExpandableBreakout slot="entry" id="HttpMeta_HTTPMetadata" headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata" parentId="HttpMeta">
 
 <div slot="title">
 
-#### HTTPMetadata [#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+HTTPMetadata]
+#### HTTPMetadata [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata]
 
 </div>
 
@@ -418,13 +434,14 @@ Validation Error
 <ExpandableProperty
   slot="entry"
   id="HttpMeta_HTTPMetadata_Request"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata_request"
   parentId="HttpMeta_HTTPMetadata"
   typeInfo={{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### Request [#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+HTTPMetadata+Request]
+##### Request [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata_request]
 
 </div>
 
@@ -439,13 +456,14 @@ Raw HTTP request; suitable for debugging
 <ExpandableProperty
   slot="entry"
   id="HttpMeta_HTTPMetadata_Response"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata_response"
   parentId="HttpMeta_HTTPMetadata"
   typeInfo={{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### Response [#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+HTTPMetadata+Response]
+##### Response [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata_response]
 
 </div>
 
@@ -460,21 +478,22 @@ Raw HTTP response; suitable for custom response parsing
 <ExpandableProperty
   slot="entry"
   id="detail"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### detail [#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail]
+##### detail [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail]
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="detail_ValidationError" parentId="detail">
+<ExpandableBreakout slot="entry" id="detail_ValidationError" headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror" parentId="detail">
 
 <div slot="title">
 
-#### ValidationError [#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError]
+#### ValidationError [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror]
 
 </div>
 
@@ -483,13 +502,14 @@ Raw HTTP response; suitable for custom response parsing
 <ExpandableProperty
   slot="entry"
   id="detail_ValidationError_loc"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror_loc"
   parentId="detail_ValidationError"
   typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### loc [#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+loc]
+##### loc [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror_loc]
 
 </div>
 
@@ -498,13 +518,14 @@ Raw HTTP response; suitable for custom response parsing
 <ExpandableProperty
   slot="entry"
   id="detail_ValidationError_msg"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror_msg"
   parentId="detail_ValidationError"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### msg [#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+msg]
+##### msg [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror_msg]
 
 </div>
 
@@ -513,13 +534,14 @@ Raw HTTP response; suitable for custom response parsing
 <ExpandableProperty
   slot="entry"
   id="detail_ValidationError_type"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror_type"
   parentId="detail_ValidationError"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### type [#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+type]
+##### type [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror_type]
 
 </div>
 
