--- a/examples/nextra/pokeapi/src/app/api/tag/machines/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/tag/machines/page.mdx
@@ -18,7 +18,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionTitle slot="title" variant="top-level">
 
-### Security [#operation-api_v2_machine_list+security]
+### Security [#operation-api_v2_machine_list_security]
 
 </SectionTitle>
 
@@ -29,11 +29,12 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_machine_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth [#operation-api_v2_machine_list+security+cookieAuth]
+##### cookieAuth [#operation-api_v2_machine_list_security_cookieauth]
 
 </div>
 
@@ -42,11 +43,12 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_machine_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth [#operation-api_v2_machine_list+security+basicAuth]
+##### basicAuth [#operation-api_v2_machine_list_security_basicauth]
 
 </div>
 
@@ -62,7 +64,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionTitle slot="title" variant="top-level">
 
-### Parameters [#operation-api_v2_machine_list+parameters]
+### Parameters [#operation-api_v2_machine_list_parameters]
 
 </SectionTitle>
 
@@ -73,12 +75,13 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="limit"
+  headingId="operation-api_v2_machine_list_parameters_limit"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
 <div slot="title">
 
-##### limit [#operation-api_v2_machine_list+parameters+limit]
+##### limit [#operation-api_v2_machine_list_parameters_limit]
 
 </div>
 
@@ -93,12 +96,13 @@ Number of results to return per page.
 <ExpandableProperty
   slot="entry"
   id="offset"
+  headingId="operation-api_v2_machine_list_parameters_offset"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
 <div slot="title">
 
-##### offset [#operation-api_v2_machine_list+parameters+offset]
+##### offset [#operation-api_v2_machine_list_parameters_offset]
 
 </div>
 
@@ -113,12 +117,13 @@ The initial index from which to return the results.
 <ExpandableProperty
   slot="entry"
   id="q"
+  headingId="operation-api_v2_machine_list_parameters_q"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
 <div slot="title">
 
-##### q [#operation-api_v2_machine_list+parameters+q]
+##### q [#operation-api_v2_machine_list_parameters_q]
 
 </div>
 
@@ -141,28 +146,29 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" variant="default">
 
-### Responses [#operation-api_v2_machine_list+responses]
+### Responses [#operation-api_v2_machine_list_responses]
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-api_v2_machine_list+responses+200+application-json">
+<SectionTab slot="tab" id="operation-api_v2_machine_list_responses_200_application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" variant="top-level" id="operation-api_v2_machine_list+responses+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_machine_list_responses_200_application-json">
 
 <ExpandableSection>
 
 <ExpandableProperty
   slot="entry"
   id="count"
+  headingId="operation-api_v2_machine_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### count [#operation-api_v2_machine_list+responses+200+application-json+count]
+##### count [#operation-api_v2_machine_list_responses_200_application-json_count]
 
 </div>
 
@@ -181,11 +187,12 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="next"
+  headingId="operation-api_v2_machine_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### next [#operation-api_v2_machine_list+responses+200+application-json+next]
+##### next [#operation-api_v2_machine_list_responses_200_application-json_next]
 
 </div>
 
@@ -204,11 +211,12 @@ http://api.example.org/accounts/?offset=400&limit=100
 <ExpandableProperty
   slot="entry"
   id="previous"
+  headingId="operation-api_v2_machine_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### previous [#operation-api_v2_machine_list+responses+200+application-json+previous]
+##### previous [#operation-api_v2_machine_list_responses_200_application-json_previous]
 
 </div>
 
@@ -227,21 +235,22 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary\">MachineSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  headingId="operation-api_v2_machine_list_responses_200_application-json_results"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list_responses_200_application-json_results_machinesummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list_responses_200_application-json_results_machinesummary\">MachineSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### results [#operation-api_v2_machine_list+responses+200+application-json+results]
+##### results [#operation-api_v2_machine_list_responses_200_application-json_results]
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="results_MachineSummary" parentId="results">
+<ExpandableBreakout slot="entry" id="results_MachineSummary" headingId="operation-api_v2_machine_list_responses_200_application-json_results_machinesummary" parentId="results">
 
 <div slot="title">
 
-#### MachineSummary [#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary]
+#### MachineSummary [#operation-api_v2_machine_list_responses_200_application-json_results_machinesummary]
 
 </div>
 
@@ -250,13 +259,14 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results_MachineSummary_url"
+  headingId="operation-api_v2_machine_list_responses_200_application-json_results_machinesummary_url"
   parentId="results_MachineSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url [#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary+url]
+##### url [#operation-api_v2_machine_list_responses_200_application-json_results_machinesummary_url]
 
 </div>
 
@@ -278,7 +288,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionTitle slot="title" variant="top-level">
 
-### Security [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security]
+### Security [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_security]
 
 </SectionTitle>
 
@@ -289,11 +299,12 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security+cookieAuth]
+##### cookieAuth [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_security_cookieauth]
 
 </div>
 
@@ -302,11 +313,12 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security+basicAuth]
+##### basicAuth [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_security_basicauth]
 
 </div>
 
@@ -322,7 +334,7 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 <SectionTitle slot="title" variant="top-level">
 
-### Parameters [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+parameters]
+### Parameters [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_parameters]
 
 </SectionTitle>
 
@@ -333,12 +345,13 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_parameters_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### id [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+parameters+id]
+##### id [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_parameters_id]
 
 </div>
 
@@ -360,29 +373,30 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" variant="default">
 
-### Responses [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses]
+### Responses [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses]
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json">
+<SectionTab slot="tab" id="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" variant="top-level" id="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json">
 
 <ExpandableSection>
 
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_id"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### id [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+id]
+##### id [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_id]
 
 </div>
 
@@ -391,22 +405,23 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="item"
-  typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item"
+  typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### item [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item]
+##### item [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item]
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="item_ItemSummary" parentId="item">
+<ExpandableBreakout slot="entry" id="item_ItemSummary" headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary" parentId="item">
 
 <div slot="title">
 
-#### ItemSummary [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary]
+#### ItemSummary [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary]
 
 </div>
 
@@ -415,13 +430,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="item_ItemSummary_name"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary_name"
   parentId="item_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary+name]
+##### name [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary_name]
 
 </div>
 
@@ -430,13 +446,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="item_ItemSummary_url"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary_url"
   parentId="item_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary+url]
+##### url [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary_url]
 
 </div>
 
@@ -445,22 +462,23 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="move"
-  typeInfo={{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move"
+  typeInfo={{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### move [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move]
+##### move [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move]
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="move_MoveSummary" parentId="move">
+<ExpandableBreakout slot="entry" id="move_MoveSummary" headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary" parentId="move">
 
 <div slot="title">
 
-#### MoveSummary [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary]
+#### MoveSummary [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary]
 
 </div>
 
@@ -469,13 +487,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="move_MoveSummary_name"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary_name"
   parentId="move_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary+name]
+##### name [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary_name]
 
 </div>
 
@@ -484,13 +503,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="move_MoveSummary_url"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary_url"
   parentId="move_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary+url]
+##### url [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary_url]
 
 </div>
 
@@ -499,22 +519,23 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="version_group"
-  typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group"
+  typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### version_group [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group]
+##### version_group [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group]
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="version_group_VersionGroupSummary" parentId="version_group">
+<ExpandableBreakout slot="entry" id="version_group_VersionGroupSummary" headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary" parentId="version_group">
 
 <div slot="title">
 
-#### VersionGroupSummary [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary]
+#### VersionGroupSummary [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary]
 
 </div>
 
@@ -523,13 +544,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="version_group_VersionGroupSummary_name"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary_name"
   parentId="version_group_VersionGroupSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary+name]
+##### name [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary_name]
 
 </div>
 
@@ -538,13 +560,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="version_group_VersionGroupSummary_url"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary_url"
   parentId="version_group_VersionGroupSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary+url]
+##### url [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary_url]
 
 </div>
 
