--- a/examples/nextra/pokeapi/src/app/api/tag/utility/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/tag/utility/page.mdx
@@ -18,7 +18,7 @@ Languages for translations of API resource information.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Security [#operation-api_v2_language_list+security]
+### Security [#operation-api_v2_language_list_security]
 
 </SectionTitle>
 
@@ -29,11 +29,12 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_language_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth [#operation-api_v2_language_list+security+cookieAuth]
+##### cookieAuth [#operation-api_v2_language_list_security_cookieauth]
 
 </div>
 
@@ -42,11 +43,12 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_language_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth [#operation-api_v2_language_list+security+basicAuth]
+##### basicAuth [#operation-api_v2_language_list_security_basicauth]
 
 </div>
 
@@ -62,7 +64,7 @@ Languages for translations of API resource information.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Parameters [#operation-api_v2_language_list+parameters]
+### Parameters [#operation-api_v2_language_list_parameters]
 
 </SectionTitle>
 
@@ -73,12 +75,13 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="limit"
+  headingId="operation-api_v2_language_list_parameters_limit"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
 <div slot="title">
 
-##### limit [#operation-api_v2_language_list+parameters+limit]
+##### limit [#operation-api_v2_language_list_parameters_limit]
 
 </div>
 
@@ -93,12 +96,13 @@ Number of results to return per page.
 <ExpandableProperty
   slot="entry"
   id="offset"
+  headingId="operation-api_v2_language_list_parameters_offset"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
 <div slot="title">
 
-##### offset [#operation-api_v2_language_list+parameters+offset]
+##### offset [#operation-api_v2_language_list_parameters_offset]
 
 </div>
 
@@ -113,12 +117,13 @@ The initial index from which to return the results.
 <ExpandableProperty
   slot="entry"
   id="q"
+  headingId="operation-api_v2_language_list_parameters_q"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
 <div slot="title">
 
-##### q [#operation-api_v2_language_list+parameters+q]
+##### q [#operation-api_v2_language_list_parameters_q]
 
 </div>
 
@@ -141,28 +146,29 @@ Case-insensitive query applied on the `name` property.
 
 <SectionTitle slot="title" variant="default">
 
-### Responses [#operation-api_v2_language_list+responses]
+### Responses [#operation-api_v2_language_list_responses]
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-api_v2_language_list+responses+200+application-json">
+<SectionTab slot="tab" id="operation-api_v2_language_list_responses_200_application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_list+responses+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_list_responses_200_application-json">
 
 <ExpandableSection>
 
 <ExpandableProperty
   slot="entry"
   id="count"
+  headingId="operation-api_v2_language_list_responses_200_application-json_count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### count [#operation-api_v2_language_list+responses+200+application-json+count]
+##### count [#operation-api_v2_language_list_responses_200_application-json_count]
 
 </div>
 
@@ -181,11 +187,12 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="next"
+  headingId="operation-api_v2_language_list_responses_200_application-json_next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### next [#operation-api_v2_language_list+responses+200+application-json+next]
+##### next [#operation-api_v2_language_list_responses_200_application-json_next]
 
 </div>
 
@@ -204,11 +211,12 @@ http://api.example.org/accounts/?offset=400&limit=100
 <ExpandableProperty
   slot="entry"
   id="previous"
+  headingId="operation-api_v2_language_list_responses_200_application-json_previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### previous [#operation-api_v2_language_list+responses+200+application-json+previous]
+##### previous [#operation-api_v2_language_list_responses_200_application-json_previous]
 
 </div>
 
@@ -227,21 +235,22 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  headingId="operation-api_v2_language_list_responses_200_application-json_results"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list_responses_200_application-json_results_languagesummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list_responses_200_application-json_results_languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### results [#operation-api_v2_language_list+responses+200+application-json+results]
+##### results [#operation-api_v2_language_list_responses_200_application-json_results]
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="results_LanguageSummary" parentId="results">
+<ExpandableBreakout slot="entry" id="results_LanguageSummary" headingId="operation-api_v2_language_list_responses_200_application-json_results_languagesummary" parentId="results">
 
 <div slot="title">
 
-#### LanguageSummary [#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary]
+#### LanguageSummary [#operation-api_v2_language_list_responses_200_application-json_results_languagesummary]
 
 </div>
 
@@ -250,13 +259,14 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results_LanguageSummary_name"
+  headingId="operation-api_v2_language_list_responses_200_application-json_results_languagesummary_name"
   parentId="results_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name [#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary+name]
+##### name [#operation-api_v2_language_list_responses_200_application-json_results_languagesummary_name]
 
 </div>
 
@@ -265,13 +275,14 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results_LanguageSummary_url"
+  headingId="operation-api_v2_language_list_responses_200_application-json_results_languagesummary_url"
   parentId="results_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url [#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary+url]
+##### url [#operation-api_v2_language_list_responses_200_application-json_results_languagesummary_url]
 
 </div>
 
@@ -293,7 +304,7 @@ Languages for translations of API resource information.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Security [#operation-api_v2_language_list+operation-api_v2_language_retrieve+security]
+### Security [#operation-api_v2_language_list_operation-api_v2_language_retrieve_security]
 
 </SectionTitle>
 
@@ -304,11 +315,12 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth [#operation-api_v2_language_list+operation-api_v2_language_retrieve+security+cookieAuth]
+##### cookieAuth [#operation-api_v2_language_list_operation-api_v2_language_retrieve_security_cookieauth]
 
 </div>
 
@@ -317,11 +329,12 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth [#operation-api_v2_language_list+operation-api_v2_language_retrieve+security+basicAuth]
+##### basicAuth [#operation-api_v2_language_list_operation-api_v2_language_retrieve_security_basicauth]
 
 </div>
 
@@ -337,7 +350,7 @@ Languages for translations of API resource information.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Parameters [#operation-api_v2_language_list+operation-api_v2_language_retrieve+parameters]
+### Parameters [#operation-api_v2_language_list_operation-api_v2_language_retrieve_parameters]
 
 </SectionTitle>
 
@@ -348,12 +361,13 @@ Languages for translations of API resource information.
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_parameters_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### id [#operation-api_v2_language_list+operation-api_v2_language_retrieve+parameters+id]
+##### id [#operation-api_v2_language_list_operation-api_v2_language_retrieve_parameters_id]
 
 </div>
 
@@ -375,29 +389,30 @@ This parameter can be a string or an integer.
 
 <SectionTitle slot="title" variant="default">
 
-### Responses [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses]
+### Responses [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses]
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json">
+<SectionTab slot="tab" id="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json">
 
 <ExpandableSection>
 
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_id"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### id [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+id]
+##### id [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_id]
 
 </div>
 
@@ -406,12 +421,13 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="iso3166"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_iso3166"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### iso3166 [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+iso3166]
+##### iso3166 [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_iso3166]
 
 </div>
 
@@ -420,12 +436,13 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="iso639"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_iso639"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### iso639 [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+iso639]
+##### iso639 [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_iso639]
 
 </div>
 
@@ -434,12 +451,13 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="name"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+name]
+##### name [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_name]
 
 </div>
 
@@ -448,22 +466,23 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName\">LanguageName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename\">LanguageName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### names [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names]
+##### names [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names]
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="names_LanguageName" parentId="names">
+<ExpandableBreakout slot="entry" id="names_LanguageName" headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename" parentId="names">
 
 <div slot="title">
 
-#### LanguageName [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName]
+#### LanguageName [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename]
 
 </div>
 
@@ -472,23 +491,24 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_LanguageName_language"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language"
   parentId="names_LanguageName"
-  typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### language [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language]
+##### language [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language]
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="names_LanguageName_language_LanguageSummary" parentId="names_LanguageName_language">
+<ExpandableBreakout slot="entry" id="names_LanguageName_language_LanguageSummary" headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary" parentId="names_LanguageName_language">
 
 <div slot="title">
 
-#### LanguageSummary [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary]
+#### LanguageSummary [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary]
 
 </div>
 
@@ -497,13 +517,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_LanguageName_language_LanguageSummary_name"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary_name"
   parentId="names_LanguageName_language_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary+name]
+##### name [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary_name]
 
 </div>
 
@@ -512,13 +533,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_LanguageName_language_LanguageSummary_url"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary_url"
   parentId="names_LanguageName_language_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary+url]
+##### url [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary_url]
 
 </div>
 
@@ -527,13 +549,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_LanguageName_name"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_name"
   parentId="names_LanguageName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+name]
+##### name [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_name]
 
 </div>
 
@@ -542,11 +565,12 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="official"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_official"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
-##### official [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+official]
+##### official [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_official]
 
 </div>
 
