--- a/examples/docusaurus/pokeapi/docs/api/tag/evolution.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/tag/evolution.mdx
@@ -30,11 +30,12 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_evolution_chain_list+security+cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth \{#operation-api_v2_evolution_chain_list+security+cookieAuth\}
+##### cookieAuth \{#operation-api_v2_evolution_chain_list+security+cookieauth\}
 
 </div>
 
@@ -43,11 +44,12 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_evolution_chain_list+security+basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth \{#operation-api_v2_evolution_chain_list+security+basicAuth\}
+##### basicAuth \{#operation-api_v2_evolution_chain_list+security+basicauth\}
 
 </div>
 
@@ -74,6 +76,7 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 <ExpandableProperty
   slot="entry"
   id="limit"
+  headingId="operation-api_v2_evolution_chain_list+parameters+limit"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -94,6 +97,7 @@ Number of results to return per page.
 <ExpandableProperty
   slot="entry"
   id="offset"
+  headingId="operation-api_v2_evolution_chain_list+parameters+offset"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -114,6 +118,7 @@ The initial index from which to return the results.
 <ExpandableProperty
   slot="entry"
   id="q"
+  headingId="operation-api_v2_evolution_chain_list+parameters+q"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -159,6 +164,7 @@ Case-insensitive query applied on the `name` property.
 <ExpandableProperty
   slot="entry"
   id="count"
+  headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -182,6 +188,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="next"
+  headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -205,6 +212,7 @@ http://api.example.org/accounts/?offset=400&limit=100
 <ExpandableProperty
   slot="entry"
   id="previous"
+  headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -228,7 +236,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+responses+200+application-json+results+EvolutionChainSummary\">EvolutionChainSummary</a>","children":[{"label":"EvolutionChainSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+responses+200+application-json+results+EvolutionChainSummary\">EvolutionChainSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+results"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+responses+200+application-json+results+evolutionchainsummary\">EvolutionChainSummary</a>","children":[{"label":"EvolutionChainSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+responses+200+application-json+results+evolutionchainsummary\">EvolutionChainSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
@@ -238,11 +247,11 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="results_EvolutionChainSummary" parentId="results">
+<ExpandableBreakout slot="entry" id="results_EvolutionChainSummary" headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+results+evolutionchainsummary" parentId="results">
 
 <div slot="title">
 
-#### EvolutionChainSummary \{#operation-api_v2_evolution_chain_list+responses+200+application-json+results+EvolutionChainSummary\}
+#### EvolutionChainSummary \{#operation-api_v2_evolution_chain_list+responses+200+application-json+results+evolutionchainsummary\}
 
 </div>
 
@@ -251,13 +260,14 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results_EvolutionChainSummary_url"
+  headingId="operation-api_v2_evolution_chain_list+responses+200+application-json+results+evolutionchainsummary+url"
   parentId="results_EvolutionChainSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_evolution_chain_list+responses+200+application-json+results+EvolutionChainSummary+url\}
+##### url \{#operation-api_v2_evolution_chain_list+responses+200+application-json+results+evolutionchainsummary+url\}
 
 </div>
 
@@ -290,11 +300,12 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+security+cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+security+cookieAuth\}
+##### cookieAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+security+cookieauth\}
 
 </div>
 
@@ -303,11 +314,12 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+security+basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+security+basicAuth\}
+##### basicAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+security+basicauth\}
 
 </div>
 
@@ -334,6 +346,7 @@ Evolution chains are essentially family trees. They start with the lowest stage 
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+parameters+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
 
@@ -378,7 +391,8 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="baby_trigger_item"
-  typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+ItemSummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}}
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item"
+  typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+itemsummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
@@ -389,11 +403,11 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="baby_trigger_item_ItemSummary" parentId="baby_trigger_item">
+<ExpandableBreakout slot="entry" id="baby_trigger_item_ItemSummary" headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+itemsummary" parentId="baby_trigger_item">
 
 <div slot="title">
 
-#### ItemSummary \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+ItemSummary\}
+#### ItemSummary \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+itemsummary\}
 
 </div>
 
@@ -402,13 +416,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="baby_trigger_item_ItemSummary_name"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+itemsummary+name"
   parentId="baby_trigger_item_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+ItemSummary+name\}
+##### name \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+itemsummary+name\}
 
 </div>
 
@@ -417,13 +432,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="baby_trigger_item_ItemSummary_url"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+itemsummary+url"
   parentId="baby_trigger_item_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+ItemSummary+url\}
+##### url \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+itemsummary+url\}
 
 </div>
 
@@ -432,6 +448,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="chain"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain"
   typeInfo={{"label":"chain","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+chain+chain\">chain</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -446,6 +463,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+responses+200+application-json+id"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -484,11 +502,12 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+security+cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+security+cookieAuth\}
+##### cookieAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+security+cookieauth\}
 
 </div>
 
@@ -497,11 +516,12 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+security+basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+security+basicAuth\}
+##### basicAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+security+basicauth\}
 
 </div>
 
@@ -528,6 +548,7 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 <ExpandableProperty
   slot="entry"
   id="limit"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+parameters+limit"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -548,6 +569,7 @@ Number of results to return per page.
 <ExpandableProperty
   slot="entry"
   id="offset"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+parameters+offset"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -568,6 +590,7 @@ The initial index from which to return the results.
 <ExpandableProperty
   slot="entry"
   id="q"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+parameters+q"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}>
 
@@ -613,6 +636,7 @@ Case-insensitive query applied on the `name` property.
 <ExpandableProperty
   slot="entry"
   id="count"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+count"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -636,6 +660,7 @@ _Example:_
 <ExpandableProperty
   slot="entry"
   id="next"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+next"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -659,6 +684,7 @@ http://api.example.org/accounts/?offset=400&limit=100
 <ExpandableProperty
   slot="entry"
   id="previous"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+previous"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
@@ -682,7 +708,8 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+EvolutionTriggerSummary\">EvolutionTriggerSummary</a>","children":[{"label":"EvolutionTriggerSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+EvolutionTriggerSummary\">EvolutionTriggerSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary\">EvolutionTriggerSummary</a>","children":[{"label":"EvolutionTriggerSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary\">EvolutionTriggerSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
 
 <div slot="title">
 
@@ -692,11 +719,11 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="results_EvolutionTriggerSummary" parentId="results">
+<ExpandableBreakout slot="entry" id="results_EvolutionTriggerSummary" headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary" parentId="results">
 
 <div slot="title">
 
-#### EvolutionTriggerSummary \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+EvolutionTriggerSummary\}
+#### EvolutionTriggerSummary \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary\}
 
 </div>
 
@@ -705,13 +732,14 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results_EvolutionTriggerSummary_name"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary+name"
   parentId="results_EvolutionTriggerSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+EvolutionTriggerSummary+name\}
+##### name \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary+name\}
 
 </div>
 
@@ -720,13 +748,14 @@ http://api.example.org/accounts/?offset=200&limit=100
 <ExpandableProperty
   slot="entry"
   id="results_EvolutionTriggerSummary_url"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary+url"
   parentId="results_EvolutionTriggerSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+EvolutionTriggerSummary+url\}
+##### url \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary+url\}
 
 </div>
 
@@ -759,11 +788,12 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 <ExpandableProperty
   slot="entry"
   id="cookieAuth"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+security+cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
 
 <div slot="title">
 
-##### cookieAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+security+cookieAuth\}
+##### cookieAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+security+cookieauth\}
 
 </div>
 
@@ -772,11 +802,12 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 <ExpandableProperty
   slot="entry"
   id="basicAuth"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+security+basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
 
 <div slot="title">
 
-##### basicAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+security+basicAuth\}
+##### basicAuth \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+security+basicauth\}
 
 </div>
 
@@ -803,6 +834,7 @@ Evolution triggers are the events and conditions that cause a Pokémon to evolve
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+parameters+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
 
@@ -847,6 +879,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="id"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+id"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -861,6 +894,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="name"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -875,7 +909,8 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+EvolutionTriggerName\">EvolutionTriggerName</a>","children":[{"label":"EvolutionTriggerName","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+EvolutionTriggerName\">EvolutionTriggerName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names"
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername\">EvolutionTriggerName</a>","children":[{"label":"EvolutionTriggerName","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername\">EvolutionTriggerName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
@@ -886,11 +921,11 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="names_EvolutionTriggerName" parentId="names">
+<ExpandableBreakout slot="entry" id="names_EvolutionTriggerName" headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername" parentId="names">
 
 <div slot="title">
 
-#### EvolutionTriggerName \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+EvolutionTriggerName\}
+#### EvolutionTriggerName \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername\}
 
 </div>
 
@@ -899,23 +934,24 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_EvolutionTriggerName_language"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+language"
   parentId="names_EvolutionTriggerName"
-  typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+EvolutionTriggerName+language+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}}
+  typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+language+languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### language \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+EvolutionTriggerName+language\}
+##### language \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+language\}
 
 </div>
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="names_EvolutionTriggerName_language_LanguageSummary" parentId="names_EvolutionTriggerName_language">
+<ExpandableBreakout slot="entry" id="names_EvolutionTriggerName_language_LanguageSummary" headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+language+languagesummary" parentId="names_EvolutionTriggerName_language">
 
 <div slot="title">
 
-#### LanguageSummary \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+EvolutionTriggerName+language+LanguageSummary\}
+#### LanguageSummary \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+language+languagesummary\}
 
 </div>
 
@@ -924,13 +960,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_EvolutionTriggerName_language_LanguageSummary_name"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+language+languagesummary+name"
   parentId="names_EvolutionTriggerName_language_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+EvolutionTriggerName+language+LanguageSummary+name\}
+##### name \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+language+languagesummary+name\}
 
 </div>
 
@@ -939,13 +976,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_EvolutionTriggerName_language_LanguageSummary_url"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+language+languagesummary+url"
   parentId="names_EvolutionTriggerName_language_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+EvolutionTriggerName+language+LanguageSummary+url\}
+##### url \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+language+languagesummary+url\}
 
 </div>
 
@@ -954,13 +992,14 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="names_EvolutionTriggerName_name"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+name"
   parentId="names_EvolutionTriggerName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+EvolutionTriggerName+name\}
+##### name \{#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+name\}
 
 </div>
 
@@ -969,6 +1008,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="pokemon_species"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+pokemon_species"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+pokemon_species+pokemon_specie\">pokemon_specie</a>","children":[{"label":"pokemon_specie","linkedLabel":"<a href=\"#operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+pokemon_species+pokemon_specie\">pokemon_specie</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
@@ -980,7 +1020,7 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="pokemon_species_pokemon_specie" parentId="pokemon_species">
+<ExpandableBreakout slot="entry" id="pokemon_species_pokemon_specie" headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+pokemon_species+pokemon_specie" parentId="pokemon_species">
 
 <div slot="title">
 
@@ -993,6 +1033,7 @@ This parameter can be a string or an integer.
 <ExpandableProperty
   slot="entry"
   id="pokemon_species_pokemon_specie_name"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+pokemon_species+pokemon_specie+name"
   parentId="pokemon_species_pokemon_specie"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
@@ -1018,6 +1059,7 @@ ivysaur
 <ExpandableProperty
   slot="entry"
   id="pokemon_species_pokemon_specie_url"
+  headingId="operation-api_v2_evolution_chain_list+operation-api_v2_evolution_chain_retrieve+operation-api_v2_evolution_trigger_list+operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+pokemon_species+pokemon_specie+url"
   parentId="pokemon_species_pokemon_specie"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}>
